# cadical-definitions

./: .gitmodules  CMakeLists.txt
python/: CMakeLists.txt  definition_extractor_bindings.cpp
scripts/: find_defined_restricted.sh
src/: CMakeLists.txt  cadical_solver.cpp  cadical_solver.hpp  definability_interpolator.cpp  definability_interpolator.hpp  definition_extractor.cpp  definition_extractor.hpp  interrupt.cpp  interrupt.hpp  main.cpp  qdimacs.hpp
